Added new api component for air search initiation. t-search-initiator is yet to be removed. documentation pending.

--- a/bower.json
+++ b/bower.json
@@ -1,49 +1,51 @@
 {
-  "name": "t-air-search",
-  "version": "0.0.0",
-  "authors": [
-    "Rahul Pilkhwal <rahul.pilkhwal@tavisca.com>",
-    "Shailesh Kumar Srivastava <ssrivastava@tavisca.com>",
-    "Sounak Pal <spal@tavisca.com>",
-    "Ajinkya Tejankar <tejankarajinkya@gmail.com>"
-  ],
-  "description": "",
-  "main": "",
-  "moduleType": [],
-  "keywords": [
-    "Polymer",
-    "Web",
-    "Components"
-  ],
-  "homepage": "",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "iron-ajax": "PolymerElements/iron-ajax#1.0.0",
-    "t-form": "atomelements/t-form#master",
-    "polymer": "Polymer/polymer#^1.0.0"
-  },
-  "devDependencies": {
-    "webcomponentsjs": "~0.7.14",
-    "iron-component-page": "PolymerElements/iron-component-page#~1.0.6"
-  },
-  "resolutions": {
-    "t-autosuggest": "master",
-    "t-button": "master",
-    "t-calendar": "master",
-    "t-checkbox-group": "master",
-    "t-colorpicker": "master",
-    "t-dropdown": "master",
-    "t-input": "master",
-    "t-notify": "master",
-    "t-radio-group": "master",
-    "t-slider": "master",
-    "t-stepper": "master"
-  }
+    "name": "t-air-search",
+    "version": "0.0.0",
+    "authors": [
+        "Rahul Pilkhwal <rahul.pilkhwal@tavisca.com>",
+        "Shailesh Kumar Srivastava <ssrivastava@tavisca.com>",
+        "Sounak Pal <spal@tavisca.com>",
+        "Ajinkya Tejankar <tejankarajinkya@gmail.com>"
+    ],
+    "description": "",
+    "main": "",
+    "moduleType": [],
+    "keywords": [
+        "Polymer",
+        "Web",
+        "Components"
+    ],
+    "homepage": "",
+    "private": true,
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "iron-ajax": "PolymerElements/iron-ajax#1.0.0",
+        "t-form": "atomelements/t-form#master",
+        "polymer": "Polymer/polymer#^1.0.0",
+        "t-shared-lib": "travelnxtelements/t-shared-lib#master",
+        "t-mystique-auth": "travelnxtelements/t-mystique-auth#master"
+    },
+    "devDependencies": {
+        "webcomponentsjs": "~0.7.14",
+        "iron-component-page": "PolymerElements/iron-component-page#~1.0.6"
+    },
+    "resolutions": {
+        "t-autosuggest": "master",
+        "t-button": "master",
+        "t-calendar": "master",
+        "t-checkbox-group": "master",
+        "t-colorpicker": "master",
+        "t-dropdown": "master",
+        "t-input": "master",
+        "t-notify": "master",
+        "t-radio-group": "master",
+        "t-slider": "master",
+        "t-stepper": "master"
+    }
 }
