--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,8 @@
         "iron-ajax": "PolymerElements/iron-ajax#1.0.0",
         "t-form": "atomelements/t-form#master",
         "polymer": "Polymer/polymer#^1.0.0",
-        "t-shared-lib": "travelnxtelements/t-shared-lib#master",
-        "t-mystique-auth": "travelnxtelements/t-mystique-auth#master"
+        "t-shared-lib": "travelnxtelements/t-shared-lib#air-api-changes",
+        "iron-meta": "PolymerElements/iron-meta#^1.1.1"
     },
     "devDependencies": {
         "webcomponentsjs": "~0.7.14",
