bug(bower.json): Add t-shared-components & remove branches

--- a/bower.json
+++ b/bower.json
@@ -25,25 +25,13 @@
     "tests"
   ],
   "dependencies": {
-    "iron-ajax": "PolymerElements/iron-ajax#1.0.0",
-    "t-form": "atomelements/t-form#master",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.0.0",
+    "t-form": "atomelements/t-form#^1.0.0",
     "polymer": "Polymer/polymer#^1.0.0"
   },
   "devDependencies": {
+    "t-shared-components": "atomelements/t-shared-components#^1.0.0",
     "webcomponentsjs": "~0.7.14",
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.6"
-  },
-  "resolutions": {
-    "t-autosuggest": "master",
-    "t-button": "master",
-    "t-calendar": "master",
-    "t-checkbox-group": "master",
-    "t-colorpicker": "master",
-    "t-dropdown": "master",
-    "t-input": "master",
-    "t-notify": "master",
-    "t-radio-group": "master",
-    "t-slider": "master",
-    "t-stepper": "master"
   }
 }
