--- a/bower.json
+++ b/bower.json
@@ -27,11 +27,14 @@
   "dependencies": {
     "iron-ajax": "PolymerElements/iron-ajax#^1.0.0",
     "t-form": "atomelements/t-form#^1.0.0",
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "t-shared-lib": "travelnxtElements/t-shared-lib#^1.0.0",
+    "t-sessionstorage": "travelnxtElements/t-sessionstorage#^1.0.1"
   },
   "devDependencies": {
     "t-shared-components": "atomelements/t-shared-components#^1.0.0",
     "webcomponentsjs": "~0.7.14",
-    "iron-component-page": "PolymerElements/iron-component-page#~1.0.6"
+    "iron-component-page": "PolymerElements/iron-component-page#~1.0.6",
+    "t-mystique-auth": "travelnxtElements/t-mystique-auth#^1.0.0"
   }
 }
